@@ -1,4 +1,5 @@
 0.32
+ - Improve clean_series_ordinal() function.
 
 0.31 2025-09-30T13:58:20+02:00
  - Add clean_isbn() function.
